libraries/ckit/regression/valid-programs/a28.c
main () {
 const int y = 1;
 y; 
}
