libraries/ckit/regression/invalid-programs/r33.c
main () {
 const int y = 1;
 y=2; 
}
